...
    <string name="theme_variant_title">Variante</string>
    <string name="theme_variant_light">Hell</string>
    <string name="theme_variant_dark">Dunkel</string>
    <string name="theme_variant_system">Standard</string>

    <string name="error_timeout">Der Server hat nicht rechtzeitig geantwortet. Versuche es später noch einmal</string>
    <string name="error_io">Es gab ein Problem bei der Datenübertragung. Versuche es erneut</string>
    <string name="error_parsing">Der Server hat beschädigte Daten gesendet. Versuche es erneut</string>
    <string name="error_unknown">Ein unbekannter Fehler ist aufgetreten. Versuche es erneut</string>
    <string name="error_ssl">
        Die Sicherheitszertifikate sind ungültig. Überprüfe ob es ein Update für die App gibt
    </string>
    <string name="error_internal">
...
    <string name="error_comment_no_permissions">Du hast nicht die nötigen Berechtigungen für diesen Kommentar</string>
    <string name="error_comment_not_active_yet">Dieses Werk kann noch nicht bewertet werden</string>

    <string name="error_wiki_no_permissions">Du hast nicht die nötigen Berechtigungen für diesen Artikel</string>

    <string name="error_login">Du bist nicht angemeldet</string>
    <string name="error_login_required">Für diesen Bereich musst du dich anmelden</string>
    <string name="error_captcha">Es wurden zu viele Anfragen gemacht</string>
    <string name="error_rate_limit">Du machst derzeit viele Anfragen. Bitte warte einen Moment um die Server zu schonen</string>
    <string name="error_age_confirmation_needed">
        Für diesen Inhalt musst du bestätigen, dass du mindestens 18 Jahre alt bist
    </string>
    <string name="error_refresh">Aktualisierung fehlgeschlagen: %s</string>
...
    <string name="error_no_data_search">Es wurde nichts gefunden, das den Kriterien entspricht</string>
    <string name="error_no_data_conferences">Du hast noch keine Chats</string>
    <string name="error_no_data_chat">Diese Konferenz hat noch keine Nachrichten</string>
    <string name="error_no_data_discussions">Für dieses Werk gibt es noch keine Diskussionen</string>
    <string name="error_no_data_profile_about">Es wurde noch nichts eingetragen</string>

    <string name="error_action_retry">Erneut versuchen</string>
    <string name="error_action_finish">Beenden</string>
    <string name="error_action_captcha">Captcha</string>
    <string name="error_action_network_settings">Einstellungen</string>
    <string name="error_action_login">Anmelden</string>
    <string name="error_action_confirm">Bestätigen</string>
    <string name="error_action_open_link">Extern öffnen</string>
...
    <string name="medium_h_manga">H-Manga</string>
    <string name="medium_oneshot">One-Shot</string>
    <string name="medium_other">Anderes</string>

    <string name="language_german">Deutsch</string>
    <string name="language_english">Englisch</string>
    <string name="language_german_sub">GerSub</string>
    <string name="language_german_dub">GerDub</string>
    <string name="language_english_sub">EngSub</string>
    <string name="language_english_dub">EngDub</string>
    <string name="language_other">Verschiedenes</string>

    <string name="season_autumn_end">Ende: Herbst %d</string>
    <string name="season_autumn_start">Start: Herbst %d</string>
    <string name="season_spring_end">Ende: Frühling %d</string>
...
    <string name="fragment_comment_rating_overall">Insgesamt</string>
    <string name="fragment_comment_rating_story">Story</string>

    <string name="fragment_discussion_meta_info">Von %1$s in %2$s</string>

    <string name="fragment_messenger_clip_title">Chatverlauf</string>
    <string name="fragment_messenger_message">Tippe eine Nachricht</string>
    <string name="fragment_messenger_reply">"@%s "</string>

    <string name="fragment_conference_info_info_title">Info</string>
    <string name="fragment_conference_info_participants_title">Teilnehmer</string>
    <string name="fragment_conference_info_time">Erstellt am %1$s um %2$s</string>

    <string name="fragment_create_conference_participants">Teilnehmer</string>
    <string name="fragment_create_conference_topic_hint">Thema</string>
    <string name="fragment_create_conference_add_participant">Teilnehmer hinzufügen</string>
    <string name="fragment_create_conference_add_participant_hint">Nutzername</string>
    <string name="fragment_create_conference_delete_description">Entfernen</string>
    <string name="fragment_create_conference_cancel_content_description">Abbrechen</string>
    <string name="fragment_create_conference_accept_description">Akzeptieren</string>

    <string name="fragment_chat_container_public">Öffentlich</string>
    <string name="fragment_chat_container_private">Privat</string>
...

    <string name="action_write_comment">Kommentar schreiben</string>
    <string name="action_create_comment">Neuer Kommentar</string>
    <string name="action_update_comment">Kommentar bearbeiten</string>

    <string name="action_send_message">Nachricht schreiben</string>
    <string name="action_create_chat">Neuer Chat</string>
    <string name="action_new_group_with_user">Neue Gruppe mit diesem Nutzer</string>
    <string name="action_create_group">Neue Gruppe</string>

    <string name="action_conference_add_user">%1$s hat %2$s zur Konferenz hinzugefügt</string>
    <string name="action_conference_delete_user">%1$s hat %2$s aus der Konferenz entfernt</string>
    <string name="action_conference_set_leader">%1$s hat %2$s als neuen Konferenzleiter bestimmt</string>
...
